--- a/templates/trending.html
+++ b/templates/trending.html
@@ -22,7 +22,7 @@
     </div>
 
     <!--main column-->
-    <div class="content-main-col" class="col-lg-10">
+    <div class="content-main-col col-lg-10">
 
         <div id="index-header" class="row center box">
             <!--title block-->
@@ -61,7 +61,7 @@
 
             <div class="nav-button col-lg-2 box">
                 <div class="box-footer">
-                <a href="{% url 'home.views.trending' %}"><span class="nav-link"></span></a>
+                <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
                     trending
                 </div>
             </div>
@@ -71,7 +71,7 @@
 
             <div class="nav-button col-lg-2 box">
                 <div class="box-footer">
-                <a href="{% url 'home.views.artist_info' %}"><span class="nav-link"></span></a>
+                <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
                     featured
                 </div>
             </div>
@@ -91,7 +91,7 @@
 
             <div class="nav-button col-lg-2 box">
                 <div class="box-footer">
-                <a href="{% url 'home.views.about' %}"><span class="nav-link"></span></a>
+                <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
                     about
                 </div>
             </div>
@@ -101,45 +101,59 @@
         <div class="content-h-separator row">
         </div>
 
+        <!--artist summary-->
+        <div class="row center box">
+            <div id="artist-summary-col">
+
+
+                <div class="clear"></div>
+            </div>  
+        </div><!--END artist summary-->
+
+        <div class="content-h-separator row">
+        </div>
+
         <div class="row center">
-            <div id="artist-result-block" class="col-lg-5 box">
-                 <div class="subtitle-text">Artists</div>
+
+            <div id="artist-song-block" class="col-lg-5 box">
+                <div class="subtitle-text">Songs</div>
                 <ul>
-                {% for artist in artists %}
+
 
                     <il>
-                        <a href = "{% url 'home.views.artist_info' %}?q={{ artist.name.split|join:'+' }}" > {{artist}} </a>
+                        <a href = {% url 'home.views.song_info' %}?q={{ song.title.split|join:'+' }} > {{ s }} </a>
                     </il>
                     <br>
 
-                {% endfor %}
+
                 </ul>
-            </div><!--END artist block-->
+            </div><!--END song block-->
 
             <div class="content-w-separator col-lg-1">
             </div>
 
-            <div id="song-result-block" class="col-lg-5 box">
-                <div class="subtitle-text">Songs</div>
+            <div id="sim-artist-block" class="col-lg-5 box">
+                 <div class="subtitle-text">Artists</div>
                 <ul>
-                {% for song in songs %}
+  
 
                     <il>
-                        <a href = "{% url 'home.views.song_info' %}?q={{ song.title.split|join:'+' }}" > {{song}} </a>
+                        <a href = {% url 'home.views.artist_info' %}?q={{ a.name.split|join:'+' }} > {{ a }} </a>
                     </il>
                     <br>
 
-                {% endfor %}
                 </ul>
-            </div><!--END song block-->
+            </div><!--END artist block-->
+
         </div><!--END dual columns-->
+        
     </div><!--END main-->
 
     <!--right column-->
     <div class="col-lg-1">
     </div>
 
-</div><!--END container-->
+</div>
 
 <script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
 <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
