--- a/templates/index.html
+++ b/templates/index.html
@@ -23,31 +23,28 @@
 
     <!--main column-->
     <div id="index-main-col" class="col-lg-10">
-        <div id="index-header" class="row box">
+        <div class="title-box row">
 
             <!--title block-->
-            <div id="title-block" class="col-lg-4">
-                <img src="{{ STATIC_URL }}img/title.png">
+            <div class="search-container col-lg-5">
+                <img src="{{ STATIC_URL }}img/title.png" class="title-img-container">
 
                 <form action="/search/" method="GET">
-                <div class="input-group">
-                    <input id="search-bar" type="text" name="q" class="form-control" >
-                </div>
-
+                    <input class="search-bar" type="text" name="q">
                 </form>
             </div><!--END title block-->
 
-            <!--summary block-->
-            <div id="summary-block" class="col-lg-8 box-footer">
-                audiosearch is a simple way to find new music.<br />
+            <div class="tag-container col-lg-7">
+                <div class="tag-block">
+                    audiosearch is a simple way to find new music.
+                </div>
             </div>
-            <!--END summary block -->
         </div>
 
-        <div id="index-h-separator" class="row">
+        <div class="content-h-separator row">
         </div>
 
-        <div id="index-content" class= "row">
+        <div class= "row">
             
             <!--trending block-->
             <div id="trending-block" class="col-lg-3 box">
@@ -61,7 +58,7 @@
                 </div>
             </div><!--END trending block-->
 
-            <div id="index-w-separator" class="col-lg-1">
+            <div class="content-w-separator col-lg-1">
             </div>
 
             <!--featured-block-->
@@ -84,34 +81,48 @@
                 
             </div><!--END featured-block-->
 
-            <div id="index-w-separator" class="col-lg-1">
+            <div class="content-w-separator col-lg-1">
             </div>
 
-            <!--compare block-->
-            <div id="compare-block" class="col-lg-3 half-box">
-                <!--<img src="{{ STATIC_URL }}img/compare.png"> <br />-->
-                Search for two artists or songs to see a visual representation of their differences.</br>
-                <!--<a href = {% url 'home.views.compare' %}>Try it.</a>-->
+            <div class="col-lg-3">
+                <div class="row">
+                    <div class="content-w-separator col-lg-1">
+                    </div>
 
-                <div class="box-footer">
-                    compare
+                    <!--compare block-->
+                    <div id="compare-block" class="col-lg-11 half-box">
+                        <!--<img src="{{ STATIC_URL }}img/compare.png"> <br />-->
+                        Search for two artists or songs to see a visual representation of their differences.<br />
+                        <!--<a href = {% url 'home.views.compare' %}>Try it.</a>-->
+
+                        <div class="box-footer">
+                            compare
+                        </div>
+                    </div><!--END compare-->
                 </div>
-            </div><!--END block-->
 
-            <div id="index-w-separator" class="col-lg-1">
+                <div id="half-box-h-separator" class="row">
+                </div>
+
+                <div class="row">
+                    <div class="content-w-separator col-lg-1">
+                    </div>
+
+                    <!--misc block-->
+                    <div id="about-block" class="col-lg-11 half-box">
+                        <!--<img src="{{ STATIC_URL }}img/compare.png"> <br />-->
+                        Search for two artists or songs to see a visual representation of their differences.<br />
+                        <!--<a href = {% url 'home.views.compare' %}>Try it.</a>-->
+
+                        <div class="box-footer">
+                            about
+                        </div>
+                    </div><!--END misc-->
+                </div>
+
             </div>
 
-            <!--misc block-->
-            <div id="about-block" class="col-lg-3 half-box">
-                <!--<img src="{{ STATIC_URL }}img/compare.png"> <br />-->
-                Search for two artists or songs to see a visual representation of their differences.</br>
-                <!--<a href = {% url 'home.views.compare' %}>Try it.</a>-->
-
-                <div class="box-footer">
-                    about
-                </div>
-            </div><!--END block-->
-        </div>
+        </div><!--END content-->
     </div>
 
     <!--right column-->
