--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="col-lg-1"></div>
 
     <!--main column-->
-    <div id="content-main-col" class="col-lg-10">
+    <div id="index-title-offset" class="content-main-col" class="col-lg-10">
         <!--header block-->
         <div class="title-box row">
 
@@ -42,7 +42,7 @@
 
         <div class="content-h-separator row"></div>
 
-        <div class= "row">
+        <div class= "row center">
             
             <!--trending block-->
             <div id="trending-block" class="col-lg-3 box">
